# particle-simulation

./: CMakeLists.txt  README.md
include/: particle.hpp  renderer.hpp  utils.hpp
src/: main.cpp
